@@ -2,6 +2,7 @@
 	- OSX GUI for no web access dialog.
 	- OSX update dnssec-trigger.conf with new url settings.
 	- OSX fix the double-window shown bug, bug in NSWindow deminiaturize func.
+	- open web browser to login to a hot spot.
 
 7 March 2012: Wouter
 	- print syntax error for url config items.
